# ztech-ecs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
private/: main.cpp
private/ecs/: composer.cpp  entity_array.cpp
public/ecs/: component_array.h  composer.h  ecs_types.h  entity_array.h  system.h
unit_test/: check_component_registration.cpp  check_composer.cpp  check_entity_one_alloc.cpp  check_parallel_for.cpp  check_system_def.cpp  definitions.h  main.cpp
